@@ -1,0 +1,4 @@
+<configuration>
+	<dllmap dll="karma" target="libkarma.so" />
+</configuration>
+
